# nyu-tech-ub-project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
Initial/: binanceus.py  binanceustrade.py  coinbase.py  coinbasetrade.py  combined_bookandtrade.py  combined_booksnapshot.py  combined_trade.py  hyperliquid.py  hyperliquidtrade.py  poloniex.py  poloniextrade.py
crypto_hft/: config.py  data_processor.py  main.py  main_loop.py  symbol_mapper.py  utils.py
crypto_hft/data_layer/: check_database.py  data_processor.py  database.py  db_writer.py  queue_manager.py  websocket.py
crypto_hft/funding_rate/: fetch_data.py  funding_fetch_loop.py  insert_funding_data.py  symbol_manager.py
crypto_hft/metadata/: currency_tracker.py  differ.py  fetcher.py  inserter.py  models.py
crypto_hft/models/: __init__.py  cross_exchange_arb.py  cross_exchange_arb_analysis.py  fair_value_model.py  market_models.py  perp_basis_analysis.py  symbol_models.py
crypto_hft/perps/: create_queue.py  gcs_fallback_writer.py  launcher_script.py  normalizers.py  postgres_utils.py  streamer.py  timeutils.py
crypto_hft/spot/: data_processor.py  db_writer.py  main_loop.py  websocket.py  websocket_streamer.py
crypto_hft/streamlit/: README.md  plotting_utils.py  price_chart.py  util_functions.py
crypto_hft/utils/: config.py  symbol_mapper.py  time_utils.py
crypto_hft/utils/logging/: logger.py
crypto_hft/utils/logging/handlers/: __init__.py  telegram.py
docs/: high-level.md  ml-high-level.md  schemas.md
docs/backend-low-level/: funding_rate.md  metadata.md  perps.md  spot.md  utils.md
initial 1/: database.py
initial 1/src/: config.py  data_processor.py  db_writer.py  main.py  symbol_mapper.py  websocket.py
initial2/: database.py
initial2/src/: config.py  db_writer.py  main.py  symbol_mapper.py  websocket.py
