[project]
name = "crypto_hft"
version = "0.1.0"
description = "TECH-UB-24 Crypto HFT Project"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "aiohttp>=3.11.14",
    "aiomysql>=0.2.0",
    "aiosonic>=0.24.0",
    "asyncpg>=0.30.0",
    "ccxt>=4.4.30",
    "ciso8601>=2.3.2",
    "loguru>=0.7.3",
    "msgspec>=0.19.0",
    "mypy>=1.15.0",
    "mysql-connector-python>=9.2.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "types-psycopg2>=2.9.21.20250121",
    "uvloop>=0.21.0",
    "websockets>=15.0.1",
]
