[project]
name = "crypto_hft"
version = "0.1.0"
description = "TECH-UB-24 Crypto HFT Project"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "aiohttp>=3.11.14",
    "aiomysql>=0.2.0",
    "aiosonic>=0.24.0",
    "asyncpg>=0.30.0",
    "ccxt>=4.4.30",
    "ciso8601>=2.3.2",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "msgspec>=0.19.0",
    "mypy>=1.15.0",
    "mysql-connector-python>=9.2.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "polars>=1.27.1",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=19.0.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "tqdm>=4.67.1",
    "types-psycopg2>=2.9.21.20250121",
    "types-tqdm>=4.67.0.20250417",
    "uvloop>=0.21.0",
    "websockets>=15.0.1",
]
